# newtons-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Lib/: CMakeLists.txt
newtons-cpp/: CMakeLists.txt  Math.h  Vector2.h  Vector3.h  newtons-cpp.cpp  newtons-cpp.h
newtons-editor/: CMakeLists.txt  hash.h  main.cpp  mesh.cpp  mesh.hpp  newtonsVulkanEngine.cpp  obj_reader.h  obj_reader.hpp  transform.hpp  transformationMatrices.hpp  vertex.cpp  vertex.hpp
newtons-editor/shaders/: compile.bat  compile.sh  shader.frag  shader.vert
newtons-engine/: CMakeLists.txt  Mathf.h  Vector2.h  Vector3.h
newtons-utils/: CMakeLists.txt  Mathf.hpp  Vec2.hpp  Vec3.hpp  hash.hpp  mat4x4.hpp  mathf.hpp  quaternion.hpp  vec2.hpp  vec3.hpp  vec4.hpp
newtons-utils/tests/: CMakeLists.txt  mat4x4_test.cpp  quaternion_test.cpp  vec2_test.cpp  vec3_test.cpp  vec4_test.cpp
scripts/: build.sh  debug-build.sh  release-build.sh
